# divkit

./: .gitignore  CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.crates.md  README.md  audit.toml  deny.toml
.github/workflows/: ci.yml  release.yml
.superpowers/sdd/: final-fixes-report.md
builder/: pyproject.toml
builder/divkit_builder/: __init__.py  frames.py  schema.py  sec.py
builder/divkit_builder.egg-info/: PKG-INFO  SOURCES.txt  entry_points.txt  requires.txt  top_level.txt
builder/tests/: test_frames.py  test_reconcile.py  test_schema.py  test_sec.py  test_validate.py
builder/tests/fixtures/: frames_cy2022q1.json
cli/: Cargo.toml
cli/src/: main.rs
crates/divkit/: Cargo.toml
crates/divkit/src/: cache.rs  client.rs  error.rs  fetcher.rs  lib.rs  parquet_io.rs  price.rs  record.rs
crates/divkit/tests/: cache.rs  client.rs  python_interop.rs
data/: dividends-2009.parquet  dividends-2010.parquet  dividends-2011.parquet  dividends-2012.parquet  dividends-2013.parquet  dividends-2014.parquet  dividends-2015.parquet  dividends-2016.parquet  dividends-2017.parquet  dividends-2018.parquet  dividends-2019.parquet  dividends-2020.parquet  dividends-2021.parquet  dividends-2022.parquet  dividends-2023.parquet  dividends-2024.parquet  dividends-2025.parquet  dividends-2026.parquet  manifest.json
docs/superpowers/plans/: 2026-06-24-divkit-dividend-database.md
docs/superpowers/specs/: 2026-06-24-divkit-dividend-database-design.md
