[workspace]
resolver = "2"
members = ["crates/divkit", "cli"]

[workspace.package]
version = "0.0.3"
edition = "2021"
authors = ["userFRM"]
license = "MIT OR Apache-2.0"
repository = "https://github.com/userFRM/divkit"
documentation = "https://docs.rs/divkit"

[workspace.dependencies]
anyhow = "1.0"
thiserror = "2.0"
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tracing = "0.1"
chrono = { version = "0.4", features = ["serde"] }
reqwest = { version = "0.12", features = ["json", "gzip", "stream"] }
bytes = "1"
futures = "0.3"
sha2 = "0.10"
arrow = "58"
parquet = "58"
