[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "divkit-builder"
version = "0.1.0"
requires-python = ">=3.11"
dependencies = ["httpx[http2]>=0.27", "pyarrow>=16"]

[project.scripts]
divkit-build = "divkit_builder.build:main"

[tool.hatch.build.targets.wheel]
packages = ["divkit_builder"]

[tool.ruff]
line-length = 100
