[package]
name = "divkit-cli"
version.workspace = true
edition.workspace = true
license.workspace = true

[[bin]]
name = "divkit-cli"
path = "src/main.rs"

[dependencies]
divkit = { path = "../crates/divkit" }
tokio = { workspace = true }
anyhow = { workspace = true }
clap = { version = "4", features = ["derive"] }
